--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
           "options": {
             "aot": true,
             "preserveSymlinks": true,
-            "outputPath": "dist",
+            "outputPath": "dist/sibun-admin",
             "index": "src/index.html",
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
